--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
   <script>
     window.$docsify = {
       name: 'Industrial_Robot_Lab',
-      repo: ''
-
+      repo: '',
+      maxLevel: 5,
+      subMaxLevel: 3,
+      homepage: 'README.md',
+      //loadSidebar: true
     }
   </script>
   <!-- Docsify v4 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify@4">
-
-  </script>
+  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
 </body>
 
 </html>
