--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       maxLevel: 5,
       subMaxLevel: 3,
       homepage: 'README.md',
+      coverpage: true
       //loadSidebar: true
     }
   </script>
