--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: 'Industrial_Robot_Lab',
+      name: '机电教研室',
       repo: '',
       maxLevel: 5,
       subMaxLevel: 3,
