--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>IR_Lab</title>
+  <title>机电教研室</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -15,7 +15,7 @@
   <script>
     window.$docsify = {
       name: '机电教研室',
-      repo: '',
+      repo: 'https://github.com/TGV-Duplex/TGV-Duplex.github.io.git',
       maxLevel: 5,
       subMaxLevel: 3,
       homepage: 'README.md',
